namespace java com.ishangke.edunav.commoncontract.model

struct CreditHistoryBo {
    1: i32 id
    2: double charge
    3: i32 userId
    4: i64 lastModifyTime
    5: i64 createTime
    6: i32 deleted
    7: i32 idStart
    8: i32 idEnd
    9: double chargeStart
    10: double chargeEnd
    11: i32 userIdStart
    12: i32 userIdEnd
    13: i64 lastModifyTimeStart
    14: i64 lastModifyTimeEnd
    15: i64 createTimeStart
    16: i64 createTimeEnd
}