namespace java com.ishangke.edunav.commoncontract.model

struct CreditBo {
    1: i32 id
    2: double credit
    3: i64 lastModifyTime
    4: i64 createTime
    5: i32 enabled
    6: i32 deleted
    7: i32 idStart
    8: i32 idEnd
    9: i32 idSet
    10: i64 lastModifyTimeStart
    11: i64 lastModifyTimeEnd
    12: i64 createTimeStart
    13: i64 createTimeEnd
}